fixed the videos on mobile + accessed made them auto play on mobile

--- a/scss/components/pageBlog/_blogMainSection.scss
+++ b/scss/components/pageBlog/_blogMainSection.scss
@@ -14,7 +14,7 @@
     }
 
     .anim-gradient{
-      color: white;
+      color: #FF66FF;
       background: -webkit-linear-gradient(
         45deg, #FF66FF 0%, #FF66FF 50%, #FA00FF 51%, #FF66FF 100%
         );
